<resources>

    <!-- Main Search -->
    <string name="app_name">Recipes</string>
    <string name="enter_ingredients">Enter Ingredients Here:</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="powered_by">Powered by Edamam API</string>
    <string name="search_icon">search</string>

    <!-- Recipe Details  -->
    <string name="recipe_name">Recipe Name</string>
    <string name="sourcesite">Sourcesite</string>
    <string name="save">Save Recipe</string>
    <string name="ingredients">Ingredients:</string>
    <string name="yield">yield</string>
    <string name="servings">Servings</string>
    <string name="Website">Website</string>
    <string name="Directions">Get Cooking Directions</string>

    <!-- Bottom Navigation  -->
    <string name="search">Search</string>
    <string name="recipe_list">Results</string>
    <string name="favourite">Favourites</string>

</resources>
