<?xml version="1.0" encoding="utf-8"?>

<!-- XML for Main Activity (where user enters their ingredient) -->


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.recipes.ui.MainActivity"
    android:background="#000000">

    
    <ImageView
        android:alpha="0.5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/recipes_pic"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/appNameTextView"
        android:textColor="@color/colorWhite"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameTextView"
        android:layout_centerHorizontal="true"
        android:id="@+id/poweredByTextView"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/colorWhite"
        android:text="@string/powered_by"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/ingredientEditText"
        android:background="@color/colorWhite"
        android:layout_marginBottom="@dimen/margin_search_bottom"
        android:hint="@string/enter_ingredients"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_search_white_24dp"
        android:id="@+id/findRecipeButton"
        android:layout_marginBottom="@dimen/margin_search_bottom"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/ingredientEditText"
        android:paddingStart="8dp"
        />

</RelativeLayout>
