<!-- The recipe displayed -->
<!--TODO (1) Does this need a scrollview? -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/recipeImageView"
                android:src="@drawable/tea"
                android:scaleType="centerCrop"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_name"
                    android:id="@+id/recipeNameTextView"
                    android:layout_alignParentStart="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:paddingStart="30dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ingredients"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:gravity="start"
                            android:padding="4dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ingredients"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:gravity="start"
                            android:padding="4dp"
                            android:id="@+id/ingredientTextView" />


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/Directions"
                            android:id="@+id/recipeWebsiteButton"
                            android:background="@color/colorAccent"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:padding="4dp"
                            />

                        <!-- TODO Material design button -->

                    </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/saveRecipeButton"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp" />
            </RelativeLayout>

    </LinearLayout>

</FrameLayout>
